# github-actions-template-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: hello-world.yml  min-unit-test-with-poetry.yml  unit-test-with-container.yml
github_actions_template_python/: __init__.py
tests/: test_aioredis.py  test_github_actions_template_python.py
