[tool.poetry]
name = "github-actions-template-python"
version = "0.1.0"
description = ""
authors = ["Teppei Nakano <noreply@git-mocopu.iflab.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
